src/yini_test/cases/golden/strict/valid/booleans-and-null/null-case-insensitive.strict.yini
@yini strict

^ Values
lower = null
upper = NULL
mixed = NuLl

/END
