src/yini_test/cases/golden/strict/invalid/sections/section-marker-separator-leading-underscore.strict.yini
@yini strict

_^ Section
value = true

/END
